k8s/ns-tmpl.yml
apiVersion: v1
kind: Namespace
metadata:
  name: %%NAME%%
spec:
  finalizers:
  - kubernetes
