k8s/patchDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: pvc-pwman-update-notifier
