k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  ports:
  - protocol: TCP
    port: 9001
